[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5" }
rodio = { version = "0.17.1", default-features = false }
tokio = { version = "1.33.0", default-features = false, features = ["rt-multi-thread"] }
