[package]
name = "SOBUB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-aac"] }
rand = { version = "0.9.0", default-features = false, features = ["thread_rng"] }
